--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.16.0"
   }
 }
